--- a/index.html
+++ b/index.html
@@ -20,22 +20,26 @@
     <section class="team">
         <div class="center">
             <h1>Kelompok 8</h1>
-            <h2>Tim kami</h2>
+            <h2>Tim kami (Klik anggota untuk membaca biografi / Hover mouse ke icon sosmed untuk username dan link)</h2>
         </div>
 
         <div class="team-content">
             <div class="box">
                 <a href="team_member1.html">
-                    <img src="img/placeholder.png">
+                    <img src="img/padlan.jpg">
                     <h3>Padlan</h3>
                     <h5>Mahasiswa</h5>
                     <div class="icons">
-                        <a href="instagram_link_here" target="_blank"><i class="ri-instagram-fill"></i></a> <span
-                            class="tooltip">Instagram</span> <!-- Added Instagram tooltip -->
+                        <a href="https://www.instagram.com/padlanb16/" target="_blank">
+                            <i class="ri-instagram-fill"></i>
+                            <span class="tooltip">@padlanb16</span>
+                        </a>
                         <i class="ri-discord-fill"></i>
-                        <span class="tooltip">Discord</span> <!-- Added Discord tooltip -->
-                        <i class="ri-github-fill"></i>
-                        <span class="tooltip">GitHub</span> <!-- Added GitHub tooltip -->
+                        <span class="tooltip">padlan169</span>
+                        <a href="https://github.com/dlan16">
+                            <i class="ri-github-fill"></i>
+                            <span class="tooltip">github.com/dlan16</span>
+                        </a>
                     </div>
                 </a>
             </div>
@@ -46,12 +50,16 @@
                     <h3>Nanda</h3>
                     <h5>Mahasiswa</h5>
                     <div class="icons">
-                        <i class="ri-instagram-fill"></i>
-                        <span class="tooltip">Instagram</span> <!-- Added Instagram tooltip -->
+                        <a href="https://www.instagram.com/kalimantancerah/">
+                            <i class="ri-instagram-fill"></i>
+                            <span class="tooltip">@kalimantancerah</span>
+                        </a>
                         <i class="ri-discord-fill"></i>
-                        <span class="tooltip">Discord</span> <!-- Added Discord tooltip -->
-                        <i class="ri-github-fill"></i>
-                        <span class="tooltip">GitHub</span> <!-- Added GitHub tooltip -->
+                        <span class="tooltip">nansudesu</span>
+                        <a href="https://github.com/stelleeblazer">
+                            <i class="ri-github-fill"></i>
+                            <span class="tooltip">github.com/stelleeblazer</span>
+                        </a>
                     </div>
                 </a>
             </div>
@@ -62,15 +70,15 @@
                     <h3>Enrique</h3>
                     <h5>Mahasiswa</h5>
                     <div class="icons">
-                        <a href="https://www.instagram.com/enriquehadinoto/" target="_blank"><i
-                                class="ri-instagram-fill"></i>
-                            <span class="tooltip">@enriquehadinoto</span> <!-- Added Instagram tooltip --></a>
+                        <a href="https://www.instagram.com/enriquehadinoto/" target="_blank">
+                            <i class="ri-instagram-fill"></i>
+                            <span class="tooltip">@enriquehadinoto</span></a>
                         <i class="ri-discord-fill"></i>
-                        <span class="tooltip">mks3021</span> <!-- Added Discord tooltip -->
-                        <a href="https://github.com/evauex" target="_blank"><i class="ri-github-fill">
-
-                            </i><span class="tooltip">github.com/evauex</span></a>
-                        <span class="tooltip">GitHub</span> <!-- Added GitHub tooltip -->
+                        <span class="tooltip">mks2031</span>
+                        <a href="https://github.com/evauex" target="_blank">
+                            <i class="ri-github-fill"></i>
+                            <span class="tooltip">github.com/evauex</span>
+                        </a>
                     </div>
                 </a>
             </div>
