team_member2.html updated

--- a/team_member2.html
+++ b/team_member2.html
@@ -34,16 +34,23 @@
             Saya <span>Muhammad Rahmananda Arief<br />mahasiswa</span> Teknik Informatika di Universitas Esa Unggul
           </h1>
           <p class="description">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos nobis culpa, deserunt optio enim distinctio, tempora porro cupiditate consequatur nam odit dolorum doloribus suscipit maxime officia exercitationem unde ab dolorem.
-            Rerum provident, mollitia voluptatibus eum temporibus qui tempora hic cupiditate! Nemo expedita impedit saepe ducimus quisquam quae. Repudiandae tempora quod autem tenetur, hic laboriosam et perspiciatis expedita labore rerum totam!
-            Laudantium eum ab dolores sed culpa sunt numquam, maxime deserunt fugiat neque ullam reprehenderit consequatur voluptate asperiores! Reprehenderit ipsum perferendis numquam delectus totam quibusdam voluptate cum rem id, eveniet aliquam.
-            Dignissimos quasi perferendis nemo, dolores doloribus, consequatur laudantium est mollitia, tempora vitae pariatur alias nobis placeat. Assumenda ut voluptatibus saepe soluta nesciunt necessitatibus quas molestiae eveniet. Cum natus deserunt quibusdam.
-            Itaque modi, fuga accusamus praesentium, doloribus illum incidunt sequi vel inventore, voluptate et! Officiis nihil, similique, inventore nobis dignissimos aperiam illo debitis ut repellendus eum praesentium odio, eligendi accusantium enim.
-            Quo illo, consectetur debitis hic fugiat ea, ratione explicabo perspiciatis harum eius nobis quisquam ipsa mollitia dolor suscipit in beatae maxime reprehenderit! Expedita laboriosam minus nemo ex sit nostrum nobis.
-            Eum, eaque! Beatae exercitationem animi enim voluptates hic, natus sequi aliquam totam quia voluptatum nihil atque ducimus et! Aliquam ipsum distinctio voluptate accusamus incidunt atque cumque harum maxime ducimus beatae.
-            Unde placeat ad hic similique neque sapiente nisi fugit, nulla labore libero enim dolor rerum provident vel pariatur, temporibus possimus qui quibusdam architecto distinctio eius sed consectetur et? Soluta, nisi!
-            Quibusdam voluptatem exercitationem dolor facilis ipsam omnis quod placeat possimus. Eum ut eveniet cumque cupiditate consequatur recusandae est animi adipisci laudantium inventore. Natus non cumque dolor nesciunt maiores magni soluta.
-            Quos molestiae illum doloribus dolores id repudiandae ipsum tempora veniam! Illum dolores neque repudiandae voluptate fugit incidunt, id minus ipsam, eligendi asperiores totam autem modi quam nulla, aperiam expedita molestiae?
+            Hi! perkenalkan, nama saya Nanda. Saya lahir di Jakarta pada tahun 2004, tepatnya di Jakarta Barat, dan telah tinggal dekat dengan kota ini sejak kecil terutama di sekitar Kemanggisan.
+
+Sejak kecil, saya memiliki minat yang besar dalam otomotif, khususnya mobil. Meskipun saya juga menyukai motor dan kendaraan komersial, minat saya terhadap mobil lebih mendalam ketimbang kendaraan lain nya. Peran mobil dalam kehidupan saya telah membawa banyak perubahan, memiliki banyak teman di dunia otomotif dan bertemu langsung dengan sosok legenda yang sudah berkecimpung didunia otomotif selama puluhan tahun.
+
+Selain otomotif, saya memiliki hobi lain yang masih berkaitan dengan otomotif. Saya mengoleksi diecast mobil skala kecil ukuran 1:64 atau sebutan lain nya adalah miniscale yang terfokus pada tema negeri sakura.
+
+Berbicara mengenai negeri sakura, saya juga sangat tertarik dengan budaya Jepang. Ketertarikan saya tidak hanya terbatas pada tontonan seperti anime, tetapi juga mencakup aspek-aspek kehidupan sehari-hari, arsitektur bangunan, dan berbagai budaya lainnya yang ada di Jepang yang tidak dapat disebut satu persatu.
+
+Dan saat ini, saya menemukan minat yang baru terlihat titik terang nya yaitu dunia musik! Saya menemukan bahwa musik adalah seuatu yang menarik terutama ketika mendengarkan detail ritme vokalis dan alat musik. Saya pribadi menyukai tiga alat musik, yaitu piano, gitar, dan biola. Saat ini, cita-cita saya adalah dapat memainkan piano dengan baik.
+
+Anda mungkin bertanya, mengapa saya memilih jurusan Teknik Informatika daripada jurusan yang lebih terkait dengan otomotif, musik, atau sastra Jepang. Salah satu contoh yang saya berikan adalah dunia otomotif. Di dunia otomotif, teknologi memiliki peran yang sangat penting, baik dalam mobil, motor, maupun kendaraan komersial. Contohnya, perkembangan teknologi yang sangat terasa belakangan ini adalah munculnya kendaraan listrik (Electric Vehicle/EV).
+
+Salah satu cita-cita saya sejak beberapa tahun terakhir ini adalah memiliki sebuah workshop mobil yang fokus pada remap Engine Control Unit (ECU) pada mesin mobil. Pada dasarnya memodifikasi komputer mesin untuk mengeluarkan tenaga yang besar, namun tetap efisien dalam konsumsi bahan bakar.
+
+Selain itu, ada banyak contoh lain yang masih berhubungan dengan hobi-hobi saya. Terkhusus pada bidang teknologi, saya tertarik pada estetika mendesain dan memerhatikan detail UI/UX tampilan pada aplikasi ataupun website dan juga pembuatan model 3D menggunakan Blender. Karena saya menyukai mobil, kadang-kadang saya senang mengimport model mobil ke dalam Blender 3D untuk iseng-iseng.
+
+Terakhir, saya ingin berterima kasih kepada Anda yang telah membaca biografi saya dari awal hingga akhir, baik yang dianggap penting maupun tidak penting. Saya percaya bahwa hal-hal yang tampak tidak penting saat ini dapat menjadi penting di masa yang akan datang. Terima kasih!
           </p>
         </div>
         <div class="image">
